Proto-06/kube/save-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    run: nginx-svr
spec:
  ports:
  - port: 443
    protocol: TCP
  selector:
    run: nginx-svc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-svr
spec:
  selector:
    matchLabels:
      run: nginx-svr
  replicas: 1
  template:
    metadata:
      labels:
        run: nginx-svr
#        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: nginx-svr
        image: nginx
        ports:
        - containerPort: 443
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx
          readOnly: true
        - name: nginx-server-certs
          mountPath: /etc/nginx-server-certs
          readOnly: true
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-configmap
      - name: nginx-server-certs
        secret:
          secretName: nginx-server-certs
